--- a/src/main/resources/career/gui/career_branch.yml
+++ b/src/main/resources/career/gui/career_branch.yml
@@ -16,9 +16,6 @@ template:
     name: "{display}"
     lore:
       - "&8| &7当前状态: {state}"
-      - "&8| &7基础能力:"
-      - "&7     {description}"
-      - "&7"
       - "&8| &7可升级的技能:"
       - "&7     {skills}"
       - "&7"
@@ -52,7 +49,8 @@ template:
       - "&8| &7当前状态: {state}"
       - "&7"
       - "&8| &7在下方可预览各等级的效果"
-      - "&8| &7点击黄色玻璃板消耗技能点升级"
+      - "&8| &7点击&e黄色玻璃板&7消耗技能点升级"
+      - "&8| &7点击&6本按钮&7将其绑定到键盘"
     feature:
       - ==: Functional
         keyword: CareerBranch$skill
@@ -87,6 +85,7 @@ template:
       - "&7     {description}"
       - "&7"
       - "&8| &7点击消耗技能点解锁顿悟"
+      - "&8| &7   或将其绑定到键盘"
       - "&8| &7这需要本分支的所有技能均达满级"
       - "&8| &7注意: &c一个分支只能解锁一个顿悟"
     feature:
