--- a/src/main/resources/career/gui/career_branch.yml
+++ b/src/main/resources/career/gui/career_branch.yml
@@ -71,7 +71,7 @@ template:
     lore:
       - "&8| &7当前状态: {state}"
       - "&7"
-      - "&8| &7在下方查询或解锁本分支的顿悟"
+      - "&8| &7在下方查询或解锁本分支的&b顿悟"
     feature:
       - ==: Functional
         keyword: CareerBranch$eureka_guide
@@ -81,10 +81,10 @@ template:
     lore:
       - "&8| &7当前状态: {state}"
       - "&7"
-      - "&8| &7顿悟能力:"
+      - "&8| &7能力:"
       - "&7     {description}"
       - "&7"
-      - "&8| &7点击消耗技能点解锁顿悟"
+      - "&8| &7点击消耗技能点解锁&d顿悟"
       - "&8| &7   或将其绑定到键盘"
       - "&8| &7这需要本分支的所有技能均达满级"
       - "&8| &7注意: &c一个分支只能解锁一个顿悟"
