--- a/src/main/resources/career/branch/建筑师/交通工程师.yml
+++ b/src/main/resources/career/branch/建筑师/交通工程师.yml
@@ -63,13 +63,13 @@ skills:
     1:
       description:
         - "&eCD：&a360s"
-        - "&c仅当位于水中时可触发"
+        - "&c仅当位于水或不可融化的冰边时可触发"
         - "&7在原地召唤一艘&b船&7（随机材质）"
       cooldown: 360
     2:
       description:
         - "&eCD：&a360s"
-        - "&c当位于水中时触发"
+        - "&c当位于水或不可融化的冰边时触发"
         - "&7在原地召唤一艘&b船&7（随机材质）"
         - "&c当位于各类铁轨上时触发"
         - "&7在原地召唤一辆&b矿车"
