--- a/src/main/resources/career/branch/农夫/渔夫.yml
+++ b/src/main/resources/career/branch/农夫/渔夫.yml
@@ -30,7 +30,7 @@ skills:
       1:
         - "&7下次钓鱼成功时，若钓得的是鱼类*，则&b额外获得 &a1个 &7相应的鱼"
       2:
-        - "&7此技能 &aCD -10s"
+        - "&7下次钓鱼成功时，若钓得的是鱼类*，则&b额外获得 &a1个 &7相应的鱼"
       3:
         - "&7下次钓鱼成功时，若钓得的是鱼类*，则"
         - "&7有 &a50% &7概率&b额外获得 &a1个 &7相应的鱼"
