--- a/src/main/resources/career/branch/学者/附魔师.yml
+++ b/src/main/resources/career/branch/学者/附魔师.yml
@@ -49,9 +49,13 @@ skills:
         - "&7则可以通过花费 &a30经验等级 &7和 &a64个 &7青金石完成此附魔"
         - "&c附魔完成后，铁砧被破坏"
       2:
-        - "&7此技能 &aCD -150s"
+        - "&7下次使用铁砧附魔时，若&b过于昂贵"
+        - "&7则可以通过花费 &a30经验等级 &7和 &a64个 &7青金石完成此附魔"
+        - "&c附魔完成后，铁砧被破坏"
       3:
-        - "&7此技能 &aCD &7额外 &a-150s"
+        - "&7下次使用铁砧附魔时，若&b过于昂贵"
+        - "&7则可以通过花费 &a30经验等级 &7和 &a64个 &7青金石完成此附魔"
+        - "&c附魔完成后，铁砧被破坏"
   #继续添加
 eurekas:
   青金术师:
