--- a/src/main/resources/career/branch/建筑师/交通工程师.yml
+++ b/src/main/resources/career/branch/建筑师/交通工程师.yml
@@ -51,7 +51,10 @@ skills:
         - "&c当位于各类铁轨上时触发"
         - "&7在原地召唤一辆&b矿车"
       3:
-        - "&c此技能 &aCD -60s"
+        - "&c当位于水中时触发"
+        - "&7在原地召唤一艘&b船&7（随机材质）"
+        - "&c当位于各类铁轨上时触发"
+        - "&7在原地召唤一辆&b矿车"
   #继续添加
 eurekas:
   下界开路者:
