--- a/src/main/resources/career/gui/branch.yml
+++ b/src/main/resources/career/gui/branch.yml
@@ -51,7 +51,7 @@ template:
       - "&7"
       - "&8| &7在下方可预览各等级的效果"
       - "&8| &7点击&e黄色块&7消耗技能点升级"
-      - "&8| &7点击&6本按钮&7将其绑定到键盘"
+      - "&8| &6左击本按钮&7将其绑定到键盘"
     feature:
       - ==: Functional
         keyword: Branch$skill
