--- a/src/main/resources/career/gui/career.yml
+++ b/src/main/resources/career/gui/career.yml
@@ -81,7 +81,7 @@ template:
       - "&8| &7将&a技能&7/&d顿悟&7绑定到键盘"
       - "&8| &7通过&b职业信物&7释放它们"
       - "&8| &7"
-      - "&8| &7点击获取&b职业信物"
+      - "&8| &职业信物合成方式见Wiki"
       - "&8| &7"
       - "&8| &7当前绑定列表:"
       - "&7       {binds}"
