--- a/src/main/resources/career/branch/厨师/主厨.yml
+++ b/src/main/resources/career/branch/厨师/主厨.yml
@@ -5,7 +5,7 @@ description:
   - " "
   - "&7分支基础效果："
   - "&7可以&b使用&7烟熏炉"
-  - "&7可以在烟熏炉周围&b放置&7漏斗、发射器"
+  - "&7可以在烟熏炉周围&b放置&7漏斗、发射器、投掷器"
   - "&7可以&b合成&7金苹果、金胡萝卜、闪烁的西瓜"
   - "&7食用任意食物后额外获得 &a1饥饿值"
   - "&7食用金苹果或附魔金苹果后&b立即恢复所有饥饿值"
