--- a/src/main/resources/career/branch/战士/武器专家.yml
+++ b/src/main/resources/career/branch/战士/武器专家.yml
@@ -6,11 +6,12 @@ description:
   - "&7分支基础效果："
   - "&7使用&b任意武器*&7均可以造成&b全额伤害"
   - "&7使用&b三叉戟&7时造成伤害 &a+2点 (1♥)"
+  - "&7使用&b弩&7时有 &a25% &7概率&b不消耗&7箭"
   - "&c! &7对光灵箭、药箭、烟花火箭&c不生效"
   - "&7可以&b合成&7钻石武器*、钻石防具*"
-  - "&7可以&b使用&7锻造台对&b武器&7、&b防具&7进行&b锻造"
-  - "&7可以&b使用&7砂轮对&b武器&7、&b防具&7进行&b祛魔、修复"
-  - "&7可以&b使用&7铁砧对&b武器&7、&b防具&7进行&b附魔、修复、重命名"
+  - "&7可以&b使用&7锻造台对&b武器、防具&7进行&b锻造"
+  - "&7可以&b使用&7砂轮对&b武器、防具&7进行&b祛魔、修复"
+  - "&7可以&b使用&7铁砧对&b武器、防具&7进行&b附魔、修复、重命名"
   - " "
   - "&7带*部分的详细解释请参见&b服务器Wiki"
 skills:
