branch fix bugs

--- a/src/main/resources/career/branch/农夫/植物学家.yml
+++ b/src/main/resources/career/branch/农夫/植物学家.yml
@@ -7,6 +7,7 @@ description:
   - "&7可以&b放置&7各类树苗*"
   - "&7可以&b使用&7骨粉"
   - "&7可以&b使用&7堆肥桶"
+  - "&7可以在堆肥桶周围&b放置&7漏斗"
   - "&7收割成熟的作物时有 &a10% &7概率&b额外获得 &a1个 &7相应作物"
   - " "
   - "&7带*部分的详细解释请参见&b服务器Wiki"
