--- a/src/main/resources/career/branch/厨师/药剂师.yml
+++ b/src/main/resources/career/branch/厨师/药剂师.yml
@@ -5,7 +5,7 @@ description:
   - " "
   - "&7分支基础效果："
   - "&7可以&b使用&7酿造台"
-  - "&7可以在酿造台周围&b放置&7漏斗、发射器"
+  - "&7可以在酿造台周围&b放置&7漏斗、发射器、投掷器"
   - "&7合成谜之炖菜时&b必定成功"
   - " "
   - "&7带*部分的详细解释请参见&b服务器Wiki"
@@ -16,15 +16,15 @@ skills:
     type: PASSIVE
     description:
       1:
-        - "&7周围六格内进行的酿造:"
+        - "&7周围6格内进行的酿造:"
         - "&7  未加入红石粉的药水持续时间 &a+20s"
         - "&7  加入红石粉的药水持续时间 &a+30s"
       2:
-        - "&7周围六格内进行的酿造:"
+        - "&7周围6格内进行的酿造:"
         - "&7  未加入红石粉的药水持续时间 &a+20s"
         - "&7  加入红石粉的药水持续时间 &a+40s"
       3:
-        - "&7周围六格内进行的酿造:"
+        - "&7周围6格内进行的酿造:"
         - "&7  未加入红石粉的药水持续时间 &a+40s"
         - "&7  加入红石粉的药水持续时间 &a+60s"
   蒸发控件:
@@ -51,17 +51,17 @@ skills:
     description:
       1:
         - "&c仅当不携带不死图腾时触发"
-        - "&7下次&b喷溅型治疗药水II&7时"
+        - "&7下次使用&b喷溅型治疗药水II&7时"
         - "&7为受影响的每个玩家赋予"
         - "&a8秒 &7抗火、&a20秒 &7生命恢复I、&a3秒 &7伤害吸收I"
       2:
         - "&c仅当不携带不死图腾时触发"
-        - "&7下次&b喷溅型治疗药水II&7时"
+        - "&7下次使用&b喷溅型治疗药水II&7时"
         - "&7为受影响的每个玩家赋予"
         - "&a12秒 &7抗火、&a25秒 &7生命恢复II、&a4秒 &7伤害吸收II"
       3:
         - "&c仅当不携带不死图腾时触发"
-        - "&7下次&b喷溅型治疗药水II&7时"
+        - "&7下次使用&b喷溅型治疗药水II&7时"
         - "&7为受影响的每个玩家赋予"
         - "&a20秒 &7抗火、&a30秒 &7生命恢复II、&a5秒 &7伤害吸收III"
   #继续添加
