繁星工坊 2023/8/9 中午更新： 新增： 1.接近地狱基岩层时会出现警告
调整：
1.美化幸运曲奇信息
2.黑暗伤害只在主世界生效
3.不灭矿灯兼容了水下环境
4.最近玩家不会显示创造模式、旁观者模式的服主
5.制锭机床合成难度提升
6.士兵进行了削弱，集群突击降为0.75点/人，最高3点（4人）
7.优化了随机传送机制

修复：
1.生涯时间排行榜颜色代码问题
2.钓鱼竿在无鱼区块机制有问题
3.合成提示翻译问题

--- a/src/main/resources/career/branch/战士/士兵.yml
+++ b/src/main/resources/career/branch/战士/士兵.yml
@@ -82,6 +82,6 @@ eurekas:
     color: "&{#A50021}"
     description:
       - "&7周围 &a4格 &7内每有 &a1个 &7以&b【士兵】&7作为共鸣&e分支&7的非敌对玩家"
-      - "&7则自己对&b玩家&7造成的伤害 &a+1点 (0.5♥)"
-      - "&7受到来自&b玩家&7的伤害 &a-1点 (0.5♥)"
+      - "&7则自己对&b玩家&7造成的伤害 &a+0.75点 (0.375♥) (最高3点)"
+      - "&7受到来自&b玩家&7的伤害 &a-0.75点 (0.375♥) (最高3点)"
     type: PASSIVE
