繁星工坊 2023/8/11 午夜更新： 调整： 1.挂机检测不会在睡觉时出现 2.更改了药剂师顿悟的合成 3.优化的共鸣信息的显示
修复：
1.破坏方块后对该方块可以不受限制的使用物品
2.无限死亡问题
3.技能之书可以被放下

--- a/src/main/resources/career/branch/学者/教师.yml
+++ b/src/main/resources/career/branch/学者/教师.yml
@@ -5,7 +5,7 @@ description:
   - " "
   - "&7分支基础效果："
   - "&7从生存时间里程碑中&b额外获得 &a1技能点"
-  - "&7可以&b合成&7并&b放置&7讲台、书架"
+  - "&7可以&b合成&7并&b放置&7讲台、书架、雕纹书架"
   - "&7手持书&bShift+右键&7讲台可以获取一本&b技能之书"
   - "&c! &7需要消耗 &a40级 &7经验等级和 &a1技能点"
   - "&7手持书&bShift+右键&7书架可以获取一本&b技能之书"
