--- a/src/main/resources/career/branch/厨师/药剂师.yml
+++ b/src/main/resources/career/branch/厨师/药剂师.yml
@@ -4,7 +4,7 @@ description:
   - "&7萃取自然精华，酿造魔幻体验"
   - " "
   - "&7分支基础效果："
-  - "&7可以&b使用&7酿造台"
+  - "&7可以&b合成&7酿造台"
   - "&7可以在酿造台周围&b放置&7漏斗、发射器、投掷器"
   - "&7合成谜之炖菜时&b必定成功"
   - " "
